[project]
name = "ssies"
version = "0.1.0"
description = "Library for parcing data SSIES detector DMSP mission"
authors = [{name="Kirill"}]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]